--- a/pom.xml
+++ b/pom.xml
@@ -114,7 +114,17 @@
       <artifactId>postgresql</artifactId>
       <version>42.2.12</version>
     </dependency>
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-web</artifactId>
+          <version>5.2.5.RELEASE</version>
+      </dependency>
 
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-web</artifactId>
+      <version>4.2.2.RELEASE</version>
+    </dependency>
 
 
   </dependencies>
